# mhxy-pk-vision-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DESIGN.md  RESEARCH.md
docs/plans/: 2026-05-05-mvp-plan.md
docs/test-data/: bilibili-69-jianhui-videos.json  bilibili-69-jianhui-videos.md
src/mhxy_pk_vision_assistant/: __init__.py  compliance.py
tests/: test_compliance.py
